.k8s/apps/uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: uptimekuma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.16
    helm.sh/chart: uptime-kuma-2.22.0
    kubenix/hash: b34b9775a39fe19caf16118252b5b5a71e906f3f
  name: uptimekuma-uptime-kuma
  namespace: apps
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: uptimekuma
      app.kubernetes.io/name: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: uptimekuma
        app.kubernetes.io/name: uptime-kuma
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - lab-pi-bk
      automountServiceAccountToken: false
      containers:
        - image: louislam/uptime-kuma:2.2.1@sha256:7337368a77873f159435de9ef09567f68c31285ed5f951dec36256c4b267ee44
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - extra/healthcheck
            failureThreshold: 3
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /app/data
              name: storage
      priorityClassName: preemptible
      securityContext: {}
      serviceAccountName: default
      tolerations:
        - effect: NoSchedule
          key: pi-only
          operator: Equal
          value: "true"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: uptimekuma-uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: uptimekuma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.16
    helm.sh/chart: uptime-kuma-2.22.0
    kubenix/hash: b34b9775a39fe19caf16118252b5b5a71e906f3f
  name: uptimekuma-uptime-kuma
  namespace: apps
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app.kubernetes.io/instance: uptimekuma
    app.kubernetes.io/name: uptime-kuma
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.122
    lbipam.cilium.io/sharing-key: uptimekuma
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_cache_bypass $http_upgrade;
      }
  labels:
    app.kubernetes.io/instance: uptimekuma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.16
    helm.sh/chart: uptime-kuma-2.22.0
    kubenix/hash: b34b9775a39fe19caf16118252b5b5a71e906f3f
  name: uptimekuma-uptime-kuma
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: uptimekuma.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: uptimekuma-uptime-kuma
                port:
                  number: 3001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - uptimekuma.josevictor.me
      secretName: wildcard-tls
